<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE xml>
<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>virtual-cardboard</groupId>
	<artifactId>nomad-realms</artifactId>
	<version>1</version>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>virtual-cardboard</groupId>
			<artifactId>lwjgl-game-engine</artifactId>
			<version>1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.10.19</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

</project>